<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sick_safetyscanners2</name>
  <version>1.0.0</version>
  <description>ROS2 Driver for the SICK safetyscanners</description>
  <maintainer email="puck@fzi.de">puck</maintainer>
  <license>ALv2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>sensor_msgs</depend>
  <depend>sick_safetyscanners_base</depend>
  <depend>sick_safetyscanners2_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
